--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>暮云春树博客</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
